# Demo-CorrectedCode

./: CMakeLists.txt  README.md  main.cpp  sensorData.h  testCode.cpp
.github/workflows/: cpp.yml
